--- a/CSS-JSClock/index.html
+++ b/CSS-JSClock/index.html
@@ -10,9 +10,9 @@
     <div class="clock">
     
       <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand  second-hand"></div>
+        <div class="handhour-hand"></div>
+        <div class="handmin-hand"></div>
+        <div class="handsecond-hand"></div>
       </div>
     
     </div>
@@ -72,9 +72,9 @@
 </style>
 
 <script>
-    const secondHand = document.querySelector('.second-hand');
-    const minHand = document.querySelector('.min-hand');
-    const hourHand = document.querySelector('.hour-hand');
+    const secondHand = document.querySelector('.handsecond-hand');
+    const minHand = document.querySelector('.handmin-hand');
+    const hourHand = document.querySelector('.handhour-hand');
 
     function setDate (){
         const now = new Date();
